cabal-version:      3.0
name:               cryptopals
version:            0.1.0.0
synopsis:           My solutions to cryptopal challenges
author:             Siddharth Verma
maintainer:         siddharthverma314@gmail.com

library
    exposed-modules:
        Cryptopals.Convert
        Cryptopals.Xor
    build-depends:
        base ^>=4.14.1.0,
        containers,
        vector,
        text
    hs-source-dirs:   src
    default-language: Haskell2010

executable cryptopals
    main-is:          Main.hs
    other-modules:
        Solutions.HexToBase64
        Solutions.Xor
        Solutions.BreakXorSingle
    build-depends:
        base ^>=4.14.1.0,
        containers,
        cryptopals
    hs-source-dirs:   app
    default-language: Haskell2010
